mejores vistas admin

--- a/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
@@ -308,7 +308,7 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="3094" class="javax.swing.JButton">
+                  <component id="3094" class="javax.swing.JButton" binding="botonAgregarMaterial">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
