--- a/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
+++ b/src/main/java/com/criollo/machmillenium/vistas/admin/Administrador.form
@@ -339,43 +339,13 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="a2e05" class="javax.swing.JButton" binding="agregarButton3" default-binding="true">
+                  <component id="a2e05" class="javax.swing.JButton" binding="botonAgregarPresupuesto">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                       <gridbag weightx="0.0" weighty="0.0"/>
                     </constraints>
                     <properties>
                       <text value="Agregar"/>
-                    </properties>
-                  </component>
-                  <vspacer id="b83db">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                  </vspacer>
-                  <component id="2149c" class="javax.swing.JButton" binding="editarButton3" default-binding="true">
-                    <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                    <properties>
-                      <text value="Editar"/>
-                    </properties>
-                  </component>
-                  <vspacer id="6733b">
-                    <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                  </vspacer>
-                  <component id="ff1f6" class="javax.swing.JButton" binding="eliminarButton2" default-binding="true">
-                    <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                      <gridbag weightx="0.0" weighty="0.0"/>
-                    </constraints>
-                    <properties>
-                      <text value="Eliminar"/>
                     </properties>
                   </component>
                 </children>
@@ -387,7 +357,7 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="c64fc" class="javax.swing.JTable" binding="table2" default-binding="true">
+                  <component id="c64fc" class="javax.swing.JTable" binding="tablaPresupuesto">
                     <constraints/>
                     <properties>
                       <autoCreateRowSorter value="true"/>
